cc-1-9/annotations/f5-demo-app-route-basic.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route
    name: f5-demo-app-route
    namespace: f5demo
    annotations:
      # no annotations
  spec:
    host: mysite.f5demo.com
    path: "/"
    port:
      targetPort: 8080
    to:
      kind: Service
      name: f5-demo-app-route
